Fix like button alignment

--- a/react/app-main/components/ResourceTile/resource-tile.less
+++ b/react/app-main/components/ResourceTile/resource-tile.less
@@ -112,7 +112,7 @@
     &__like-resource-button {
         margin-left: 10px;
         position: relative;
-        top: 1px;
+        top: 2px;
         cursor: pointer;
         transition: all .15s @app-curve-in-out-cubic;
 
